--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -1,3 +1,26 @@
 html,body {
 	height: 100%;
 }
+/*定义滚动条高宽及背景 高宽分别对应横竖滚动条的尺寸*/
+::-webkit-scrollbar {
+    width: 3px;
+    height: 3px;
+    background-color: rgba(4,13,35,0.7);
+}
+ 
+/*定义滚动条轨道 内阴影+圆角*/
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.1);
+    border-radius: 50%;
+    background-color: rgba(4,13,35,0.7);
+}
+ 
+/*定义滑块 内阴影+圆角*/
+::-webkit-scrollbar-thumb {
+    border-radius: 50%px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.1);
+    background-color: #666;
+}
+.el-pagination {
+    text-align: center;
+}
