--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -5,21 +5,21 @@ html,body {
 ::-webkit-scrollbar {
     width: 3px;
     height: 3px;
-    background-color: rgba(4,13,35,0.7);
+    background-color: #fff;
 }
  
 /*定义滚动条轨道 内阴影+圆角*/
 ::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.1);
-    border-radius: 50%;
-    background-color: rgba(4,13,35,0.7);
+    border-radius: 2px;
+    background-color: fff;
 }
  
 /*定义滑块 内阴影+圆角*/
 ::-webkit-scrollbar-thumb {
-    border-radius: 50%px;
+    border-radius: 5px;
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.1);
-    background-color: #666;
+    background-color: #ccc;
 }
 .el-pagination {
     text-align: center;
